--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container mt-4">
+        <a th:href="@{/new}" class="btn btn-primary">Nuevo</a>
         <table class="table">
             <thead>
             <tr>
@@ -23,15 +24,16 @@
                 <td th:text="${persona.nombre}"></td>
                 <td th:text="${persona.telefono}"></td>
                 <td>
-                    <a class="btn btn-warning">Editar</a>
-                    <a class="btn btn-danger">Eliminar</a>
+                    <a th:href="@{/editar/}+${persona.id}" class="btn btn-warning">Editar</a>
+                    <a th:onclick="eliminar([[${persona.id}]])" class="btn btn-danger">Eliminar</a>
                 </td>
             </tr>
             </tbody>
 
         </table>
     </div>
-
-
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="funciones.js"></script>
 </body>
 </html>
