--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -4,10 +4,41 @@
   <meta charset="UTF-8">
   <title>CRUD</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <style>
+.card-footer {
+    text-align: center;
+}
+.card {
+    background-color: #9eb2d6; /* Color de fondo gris */
+}
+
+  .container{
+   position: relative;
+    width: 200%;
+    height: 50vh; /* Ajusta la altura según tus necesidades */
+    display: flex;
+    align-items: center; /* Centra verticalmente */
+    justify-content: center; /* Centra horizontalmente */
+
+  }
+  .card-header{
+    text-align: center;
+    background-color: black; /* Color de fondo negro */
+    text-align: center;
+    color: white; /* Color del texto blanco */
+    }
+
+    .card-body .form-group label {
+    font-size: 18px; /* Tamaño de fuente más grande */
+    font-weight: bold; /* Texto en negrita */
+    color: #415676; /* Color azul para el texto */
+}
+</style>
 
 </head>
+
 <body>
-<div class="container mt-4">
+<div class="container">
   <div class="col-sm-6">
     <form th:action="@{/guardar}" th:object="${persona}" method="post">
     <div class="card">
