--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,13 +4,39 @@
     <meta charset="UTF-8">
     <title>CRUD</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+        .table th, .table td {
+            width: 25%; /* Divide el ancho igualmente en tres columnas */
+
+        }
+    thead{
+    text-align: center; /* Alineación del texto en el centro */
+    }
+    .btn-warning,
+    .btn-danger {
+    width: 80px;
+    margin-right: 10px;
+    }
+
+
+    .btn-primary.new-button {
+    margin-top: 20px;
+
+    }
+   /* Estilo para los td en la tabla */
+.table tbody td {
+    background-color: grey; /* Color de fondo deseado para los td */
+    color: white; /* Color de texto para los td */
+    text-align: center; /* Alineación del texto en el centro */
+}
+
+    </style>
 
 </head>
 <body>
     <div class="container mt-4">
-        <a th:href="@{/new}" class="btn btn-primary">Nuevo</a>
         <table class="table">
-            <thead>
+            <thead class="table-dark">
             <tr>
                 <th>ID</th>
                 <th>NOMBRES</th>
@@ -18,7 +44,7 @@
                 <th>ACCIONES</th>
             </tr>
             </thead>
-            <tbody>
+            <tbody class="table-hover">
             <tr th:each="persona:${personas}">
                 <td th:text="${persona.id}"></td>
                 <td th:text="${persona.nombre}"></td>
@@ -31,6 +57,7 @@
             </tbody>
 
         </table>
+        <a th:href="@{/new}" class="btn btn-primary" >Nuevo</a>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
